overflow: hidden fixed up

--- a/CSS/global.css
+++ b/CSS/global.css
@@ -95,8 +95,13 @@ nav a {
   
  @media (max-width: 999px) {
 
-    html, body{
-      overflow-x: hidden!important;
+    html {
+      overflow-x: hidden;
+    }
+
+    body {
+      position: sticky;
+      overflow: hidden!important;
     }
 
     .logo {
@@ -113,7 +118,7 @@ nav a {
     .nav-list {
         position: absolute;
         width: 254px;
-        height: 100vh;
+        height: 100%;
         top: 0;
         right: 0;
         flex-direction: column;   
@@ -121,6 +126,7 @@ nav a {
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
         background: rgba(255, 255, 255, 0.04);
+        backdrop-filter: blur(81.5485px);
         padding-left: 0;
         z-index: 1;
     }
@@ -151,6 +157,7 @@ nav a {
     
     .nav-list.active {
         transform: translateX(0);
+        z-index: 1;
     }
     
     @keyframes navLinkFade {
